--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -1,6 +1,6 @@
 ---
 redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
-title: pwn文章索引
+title: avm
 tags: pwn
 ---
 
@@ -8,7 +8,8 @@ tags: pwn
 
 
 # 虚拟机学习
-
+## 什么是虚拟机
+## 硬件模拟
 # 逆向
 
 # 攻击
