--- a/_posts/2017-09-01-comments.md
+++ b/_posts/2017-09-01-comments.md
@@ -6,20 +6,20 @@ permalink: /comments/
 
 
 
-- elegy:
 
-[elegy](https://yuan0x1elegy.love/):带我入门的师傅♥♥
+
+- [elegy](https://yuan0x1elegy.love/):带我入门的师傅♥♥
 
 
 
 -------
 
+- 
+
+---------
 
 
-- elegy:
-[FOX](https://rockfox0.github.io/):密码✌
+- [FOX](https://rockfox0.github.io/):密码✌
 
-- komiko：
-
-[komiko](https://notion-next-yeye.vercel.app/):还是密码✌
+- [komiko](https://notion-next-yeye.vercel.app/):还是密码✌
 
