增加了友情连接

--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -15,6 +15,7 @@ permalink: /comments/
 -------
 
 - [k4per](www.k4per-blog.xyz):一起打pwn(~~坐牢~~)的哥们
+- [Samsāra](https://www.cnblogs.com/Samsara013):Reverse大手子
 
 ---------
 
