--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -8,16 +8,21 @@ permalink: /comments/
 
 
 
-- [elegy](https://yuan0x1elegy.love/):带我入门的师傅♥♥
+- [elegy](https://yuan0x1elegy.love/):带我入门的巨佬师傅♥♥
 
 
 
 -------
 
 - [k4per](www.k4per-blog.xyz):一起打pwn(~~坐牢~~)的哥们
+
+
 - [Samsāra](https://www.cnblogs.com/Samsara013):Reverse大手子
 
+
 - [FOX](https://rockfox0.github.io/):密码✌
+
+
 
 - [komiko](https://notion-next-yeye.vercel.app/):还是密码✌
 
