--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -16,4 +16,8 @@ tags: pwn
 # 虚拟机pwn
 
 
-- [2025国城杯avm](https://4ak5ra.github.io/2024/12/24/avm/)
+- [2025长城杯avm](https://4ak5ra.github.io/2024/12/24/avm/)
+
+# 栈
+
+# 堆
