--- a/_posts/2024-12-23-tags.md
+++ b/_posts/2024-12-23-tags.md
@@ -12,7 +12,7 @@ jekyll-theme-WuK:
 ---
 
 文章标签较多，可在侧边栏的目录中快速定位~
-
+- 搜索关键字"索引"可以更快找到想看的文章哦~~
 {% if page.jekyll-theme-WuK.tags.vega_lite.enable %}
 
 ```vega-lite
