--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -14,15 +14,19 @@ permalink: /comments/
 
 -------
 
-- [k4per](www.k4per-blog.xyz):一起打pwn(~~坐牢~~)的哥们
+- [k4per](http://8.129.16.251/):一起打pwn(~~坐牢~~)的哥们
+
 
 
 - [Samsāra](https://www.cnblogs.com/Samsara013):Reverse大手子
+
+
+- [QYQS]():二级制扛把子
 
 
 - [FOX](https://rockfox0.github.io/):密码✌
 
 
 
-- [komiko](https://notion-next-yeye.vercel.app/):还是密码✌
+
 
