--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -1,5 +1,4 @@
 ---
-
 title: pwn文章索引
 tags: pwn
 ---
@@ -12,12 +11,17 @@ tags: pwn
 
 --------
 
+# cpp_pwn
 
-# 虚拟机pwn
+
+# vm_pwn
 
 
 - [2025长城杯avm](https://4ak5ra.github.io/2024/12/24/avm/)
 
 # 栈
 
+
 # 堆
+
+- [堆基础知识点]()
