--- a/_posts/2024-12-24-gdb技巧.md
+++ b/_posts/2024-12-24-gdb技巧.md
@@ -1,7 +1,9 @@
 ---
 redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
 title: gdb
-tags: pwn
+tags: 
+- pwn
+- gdb
 ---
 
 # pie断点
@@ -10,7 +12,10 @@ tags: pwn
 使用 pwngdb 中的 $rebase() 函数可以更方便地在基地址重定位后进行调试，而无需手动计算绝对地址
 
 
-
+# 设置运行参数
+gsb启动之后可以设置运行程序参数
+- gdb filename
+- set args （参数）
 # byobu
 ## 上下文设置
 - file_name = "./pwn(假设叫这个名字)"
