--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -21,7 +21,7 @@ permalink: /comments/
 - [Samsāra](https://www.cnblogs.com/Samsara013):Reverse大手子
 
 
-- [QYQS]():二级制扛把子
+- [QYQS](https://qyqs1.github.io/):二级制扛把子
 
 
 - [FOX](https://rockfox0.github.io/):密码✌
