--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -12,13 +12,12 @@ permalink: /comments/
 
 
 
--------
+----
 
 - [k4per](http://8.129.16.251/):一起打pwn(~~坐牢~~)的哥们
 
 
-
-- [Samsāra](https://www.cnblogs.com/Samsara013):Reverse大手子
+- [Samsāra](https://samsara-lo.github.io/):Reverse大手子
 
 
 - [QYQS](https://qyqs1.github.io/):二级制扛把子
