--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -148,7 +148,8 @@ lc-3规范：
 2. 9个比特位表示与pc寄存器(也就是ip寄存器)的偏移，用于计算跳转的地方
 
 
------
+-----       
+
 实现
 ```c
 {
@@ -357,9 +358,13 @@ char *__fastcall store(vm_mem *a1, char *sta_base)
 
 # 漏洞利用
 
-- 这里用rop的思想利用程序定义的指令去构造`"shellcode"`，所以首先我们要根据原题重构这些指令
-- 具体的rop就是通过load指令读取栈中的一些地址，比如libc中函数的地址，通过sub, add指令的功能减去偏移,获得到偏移之后就用store指令将system("/bin/sh")写入到返回地址
--------
+这里用rop的思想利用程序定义的指令去构造`"shellcode"`，所以首先我们要根据原题重构这些指令            
+
+具体的rop就是通过load指令读取栈中的一些地址，比如libc中函数的地址，通过sub, add指令的功能减去偏移,获得到偏移之后就用store指令将system("/bin/sh")写入到返回地址              
+
+
+-------         
+
 ## 重构指令
 
 ```python
