--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -12,12 +12,12 @@ tags: pwn
 --------
 
 # cpp_pwn
-
+-[cpp基础底层知识]()
 
 # vm_pwn
 
 
-- [2025长城杯avm](https://4ak5ra.github.io/2024/12/24/avm/)
+- [vm_pwn学习+24长城杯avm练习](https://4ak5ra.github.io/2024/12/24/avm/)
 
 # 栈
 
