--- a/_posts/2023-12-23-comments.md
+++ b/_posts/2023-12-23-comments.md
@@ -17,7 +17,7 @@ permalink: /comments/
 - [k4per](http://8.129.16.251/):一起打pwn(~~坐牢~~)的哥们
 
 
-- [Samsāra](https://samsara-lo.github.io/):Reverse大手子
+- [Samsāra](https://samsara-lo.github.io/):ReverseMaster
 
 
 - [QYQS](https://qyqs1.github.io/):二级制扛把子
