--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -401,9 +401,11 @@ def set(target,idx1,idx2):
 
 ## 调试
 
-- 现在根据观察程序的信息来确定具体的数据,由于一开始opcode的buf里面没有值，所以我们得用load先获取一个栈上的数据数据来方便填充，并提前布置好一堆数据来方便后面调用各种指令的时候使用
+现在根据观察程序的信息来确定具体的数据,由于一开始opcode的buf里面没有值，所以我们得用load先获取一个栈上的数据数据来方便填充，并提前布置好一堆数据来方便后面调用各种指令的时候使用    
 
-- 再以__libc_start_call_main+128 为基准(不知道为什么其他的libc函数偏移量好像都不固定)，使用各种运算符得到system、pop_rdi、binsh、ret的地址，最后利用store将他们布置在栈上
+
+
+再以__libc_start_call_main+128 为基准(不知道为什么其他的libc函数偏移量好像都不固定)，使用各种运算符得到system、pop_rdi、binsh、ret的地址，最后利用store将他们布置在栈上
 
 
 
