--- a/_posts/2024-12-30-堆.md
+++ b/_posts/2024-12-30-堆.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 
-因为我比较注重文章的结构性，所以这里只是简单的列举一些相关概念和简单直观的解释(记录已经理解了的知识)，源码阅读和调试这些具体细节的知识会单独开文章记录  
+>因为我比较注重文章的结构性，所以这里只是简单的列举一些相关概念和简单直观的解释(记录已经理解了的知识)，源码阅读和调试这些具体细节的知识会单独开文章记录  
 
 # 主体知识
 ## malloc与free(32位系统，64位所有size*2)
@@ -22,7 +22,7 @@ tags:
 - 源码
 ```c
 struct malloc_chunk {
-  INTERNAL_SIZE_T      prev_size;  /* Size of previous chunk (if free).  */
+  INTERNAL_SIZE_T      prev_size;  /* Size of previous chunk (if free).  */
   INTERNAL_SIZE_T      size;       /* Size in bytes, including overhead. */
   struct malloc_chunk* fd;         /* double links -- used only if free. */
   struct malloc_chunk* bk;
@@ -33,7 +33,8 @@ struct malloc_chunk {
 ```
 ### 结构
 - 每个chunk都分为chunk header和chunk data两部分，chunk header包含了一些控制信息，是chunk多样化的原因
-- 大体可以分为allocated chunk,free chunk,top chunk
+- 大体可以分为allocated chunk,free chunk,top chunk  
+
 >思考：为什么要设计这么多的chunk，为了解决什么样的现实问题？
 
 ### malloced chunk
@@ -48,7 +49,10 @@ M：是否为mmap分配的内存，1表示是，0表示不是
 
 P:记录连续的上一个chunk是否为free chunk，如果不是是malloced chunk，那么自身被free掉的时候会与上一个free chunk合并，节省该free chunk的四个字长的数据(两个size和两个指针)     
 
+
 >这个设计就是上面的内存分配策略:字节对齐，比如我索要31字节，那么自动补齐为32字节(详情见源码)，那么此时size段低三位永远是0(去看看8(64位)的倍数的数字转成二进制)，为了`充分利用每一比特空间`就做了这种设计
+
+
 ### free chunk
 - free chunk的header在malloced chunk的基础上多了两个指针
 -fd:指向下一个free chunk(这里指linked list中的下一个chunk,包含bin,不是指内存中的下一个chunk)
