--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -4,7 +4,7 @@ title: vm_pwn
 tags: pwn
 ---
 
-- 写得这么详细是因为第一次对虚拟机类pwn题的学习(在此之前只学过很简单的栈的知识)，也是第一次见到大比赛的题
+写得这么详细是因为第一次对虚拟机类pwn题的学习(在此之前只学过很简单的栈的知识)，也是第一次见到大比赛的题
 
 
 
@@ -14,7 +14,8 @@ tags: pwn
 本文只是对原文的一些摘抄以及自己的一些理解，细节都在原文(强推)
 
 -----
-# 虚拟机概述
+<h1>虚拟机概述</h1>
+
 ## 什么是虚拟机
 >这里的虚拟机指的是一种解释器，能够运行汇编语言编写的程序的**程序**。
 
