--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -19,25 +19,32 @@ tags: pwn
 ## 什么是虚拟机
 >这里的虚拟机指的是一种解释器，能够运行汇编语言编写的程序的**程序**。
 
-我们编写虚拟机是为了：了解计算机的更底层的原理以及增加对vm_pwn的逆向能力
-- 同时我们可以学到一种**用数据来模拟现实**的思想(算法中的数据结构类也有这种思想)
+我们编写虚拟机是为了：了解计算机的更底层的原理以及增加对vm_pwn的逆向能力    
+
+
+同时我们可以学到一种**用数据来模拟现实**的思想(算法中的数据结构类也有这种思想)
 ## 虚拟机的种类
-1. 模拟硬件的虚拟机，这类虚拟机需要模拟哪些硬件要看它的使用场景，这些虚拟机通常被称为**模拟器**，但二者还是有一些区别       
+模拟硬件的虚拟机，这类虚拟机需要模拟哪些硬件要看它的使用场景，这些虚拟机通常被称为**模拟器**，但二者还是有一些区别       
+
 
 
    
-[虚拟机和模拟器的区别](https://blog.csdn.net/tjhd1989/article/details/8273447)        
+[虚拟机和模拟器的区别](https://blog.csdn.net/tjhd1989/article/details/8273447)          
 
 
-2. 另外一些虚拟机则完全是虚构的，而非用来模拟硬件。这类虚拟机的主要用途是使软件开发更容易，例如跨平台运行汇编,也就是我们这次编写的虚拟机          
+
+
+另外一些虚拟机则完全是虚构的，而非用来模拟硬件。这类虚拟机的主要用途是使软件开发更容易，例如跨平台运行汇编,也就是我们这次编写的虚拟机          
 
    
 
 >编译器也解决了类似的跨平台问题，它将标准的高级语言编写的程序编译成能在**不同 CPU 架构上执行的程序**。
 相比之下，虚拟机的跨平台方式是**自己创建一个标准的CPU架构**，然后在不同的物理设备上模拟这个 CPU 架构。
 
-# LC-3 架构
+# LC-3 架构 
+
 >与 x86 相比 ，LC-3 的指令集更 加简化，但现代 CPU 的主要思想其中都包括了
+
 
 
 ## 用数据模拟机器最基础的硬件组件
@@ -45,7 +52,8 @@ tags: pwn
 LC-3 使用16条地址线。这意味着它可以寻址65,536（2的16次方） 个不同的内存位置。每个地址对应一个内存单元，每个单元可以存储一 个 16-bit 的值。这意味着它总共可以存储 128KB 数据(64k*2,16位为2字节，每个字节表示一个数据)
 
 
-- 我们用一个数组来模拟lc3的内存，uint16_t为它的内存单元 UINT16_MAX=65,536为它的最大值，所以uint16_t memory[UINT16_MAX]为该内存;
+
+我们用一个数组来模拟lc3的内存，uint16_t为它的内存单元 UINT16_MAX=65,536为它的最大值，所以uint16_t memory[UINT16_MAX]为该内存;
 
 ### 寄存器
 一个寄存器就是 CPU 上一个能够存储单个数据的槽，因为寄存器很少，所以实际操作的思路是从内存加载数据到寄存器，然后将计算结果放到寄存器，最后将最终结果再写回内存   
@@ -85,7 +93,8 @@ LC-3 使用16条地址线。这意味着它可以寻址65,536（2的16次方） 
 所以我这里就记录这两种指令的实现，其他是都是差不多
 
 ### add指令
-- 详见原文和lc-3指令规范，这里我们只对规范和实现代码解读
+详见原文和lc-3指令规范，这里我们只对规范和实现代码解读  
+
 
 1. 前四个比特代表操作码，所以理论上我们可以实现2的4次方个指令
 2. 寄存器都只用三个比特位表示，这里只是寄存器的索引，所以理论上lc-3最多支持2的3次方个寄存器作为操作数(实际上我们前面定义寄存器的时候也就只定义了8个通用寄存器)
@@ -108,7 +117,7 @@ uint16_t sign_extend(uint16_t x, int bit_count) {
 }
 ```
 
-- 有值写到寄存器时，我们 需要更新这个标记，以标明这个值的符号
+有值写到寄存器时，我们 需要更新这个标记，以标明这个值的符号
 ```c
 //传入需要检查的寄存器的索引
 void update_flags(uint16_t r) {
@@ -122,10 +131,10 @@ void update_flags(uint16_t r) {
     }
 }
 ```
-- 然后就可以实现add了
+然后就可以实现add了
 
 ```c
-{   //0x7 是一个二进制数 00000111用于掩码操作，利用同状态才为真的性质可以去除掉无关位数据的干扰
+{   /*0x7 是一个二进制数 00000111用于掩码操作，利用同状态才为真的性质可以去除掉无关位数据的干扰*/
     uint16_t r0 = (instr >> 9) & 0x7; /* destination register (DR) */
     uint16_t r1 = (instr >> 6) & 0x7; /* first operand (SR1) */
     uint16_t imm_flag = (instr >> 5) & 0x1; /* whether we are in immediate mode */
@@ -155,8 +164,8 @@ lc-3规范：
 ```c
 {
     uint16_t pc_offset = sign_extend((instr) & 0x1ff, 9);
-    uint16_t cond_flag = (instr >> 9) & 0x7;//获取条件位(因为这个指令的操作码是0000，所以我们直接&取数据就行了)
-    if (cond_flag & reg[R_COND]) {//检查标志位，判断前一次指令的计算结果，此时就用上了update_flags(r0)
+    uint16_t cond_flag = (instr >> 9) & 0x7;/*获取条件位(因为这个指令的操作码是0000，所以我们直接&取数据就行了)*/
+    if (cond_flag & reg[R_COND]) {/*检查标志位，判断前一次指令的计算结果，此时就用上了update_flags(r0)*/
         reg[R_PC] += pc_offset;//写入pc寄存器，改变执行流
     }
 }
@@ -168,14 +177,14 @@ lc-3规范：
 - 规范：将这个字符串的地址(lc3的字符串是存储在一个连续的内存区域)放到 R0 寄存器，然后触发 trap
 ```c
 {
-    //基地址+R0中的偏移获取字符串的起始地址
+    /*基地址+R0中的偏移获取字符串的起始地址*/
     uint16_t* c = memory + reg[R_R0];
     while (*c) {
         putc((char)*c, stdout);//强制转换成char类型输出
         ++c;//递增直至遇到以空字符结尾的字符串
     }
     fflush(stdout);
-    //刷新输出缓冲区,确保任何尚未输出到标准输出（通常是终端或控制台）的数据立即被写出
+    /*刷新输出缓冲区,确保任何尚未输出到标准输出（通常是终端或控制台）的数据立即被写出*/
 ```
 
 
@@ -214,7 +223,8 @@ uint16_t mem_read(uint16_t address)
 {
     if (address == MR_KBSR) {
         if (check_key()) {
-            memory[MR_KBSR] = (1 << 15);//当访问键盘输入寄存器时，写入操作会对内存状态寄存器执行写入操作。表面此时把键盘的输入信息存到了这个寄存器中
+            memory[MR_KBSR] = (1 << 15);/*当访问键盘输入寄存器时，写入操作会对内存状态寄存器执行写入操作。
+            表面此时把键盘的输入信息存到了这个寄存器中*/
             memory[MR_KBDR] = getchar();
         } else {
             memory[MR_KBSR] = 0;//没有键按下，清空 KBSR
@@ -264,8 +274,10 @@ _QWORD *__fastcall sub_1230(_QWORD *a1, __int64 a2, __int64 a3)
 
 ```
 
-1. 传入一个bss段的qword数组,把指令段，指令尺寸都接在了这个数组后面，然后初始化了数组前面的数据，但保留了接上去的数据，也就是说这个数组里面的数据有**不同的意义**,所以可以推断这个是结构体
-2. 修结构体的部分就不细说了(基本和前面定义lc-3物理硬件的时候一样)，准备后面在逆向专门写一篇文章总结，这里大致的思路就是顺着前面的开发经验然后再根据元素的尺寸和后面sub_19F1函数推断出成员数据，但是一般情况下用gdb好分析一点                
+传入一个bss段的qword数组,把指令段，指令尺寸都接在了这个数组后面，然后初始化了数组前面的数据，但保留了接上去的数据，也就是说这个数组里面的数据有**不同的意义**,所以可以推断这个是结构体  
+
+修结构体的部分就不细说了(基本和前面定义lc-3物理硬件的时候一样)，准备后面在逆向专门写一篇文章总结，这里大致的思路就是顺着前面的开发经验然后再根据元素的尺寸和后面sub_19F1函数推断出成员数据，但是一般情况下用gdb好分析一点   
+
 
 
 ![结构体](https://s2.loli.net/2024/12/27/SCOexPDqVgi3JIw.png)
@@ -291,7 +303,7 @@ vm_mem *__fastcall sub_1230(vm_mem *vm_mem, char *a2, __int64 a3)
   return result;
 }
 ```
-- 另一个函数也就很清楚了
+另一个函数也就很清楚了
 ### sub_19F1函数
 
 ```c
@@ -305,7 +317,8 @@ unsigned __int64 __fastcall disassemble(vm_mem *a1)
   memset(s, 0, 0x100uLL);                       // 这里用结构体寻址+索引来定位
   while ( a1->rip < (unsigned __int64)a1->max_len )
   {
-    high_bit = *(_DWORD *)&a1->opcode[a1->rip & 0xFFFFFFFFFFFFFFFCLL] >> 28;// 第一字节为标志位,&0xFFFFFFFFFFFFFFF保证四字节对齐，可以推断出为32位
+    high_bit = *(_DWORD *)&a1->opcode[a1->rip & 0xFFFFFFFFFFFFFFFCLL] >> 28;/*第一字节为标志位,
+    &0xFFFFFFFFFFFFFFF保证四字节对齐，可以推断出为32位*/
     if ( high_bit > 0xA || !high_bit )
     {
       puts("Unsupported instruction");
@@ -318,7 +331,8 @@ unsigned __int64 __fastcall disassemble(vm_mem *a1)
 ```
 
 ## add指令
-- 有了开发经验除了最后两个指令其他指令都可以一眼看出来，直接看最后部分就行了，知道是什么指令再反过去推出指令规范就行了
+有了开发经验除了最后两个指令其他指令都可以一眼看出来，直接看最后部分就行了，知道是什么指令再反过去推出指令规范就行了    
+
 
 点进去第一个sub_129A然后复原一下结构体
 ```c
@@ -331,7 +345,7 @@ void __fastcall add(vm_mem *a1)
   a1->reg[used_opcode & 0x1F] = a1->reg[HIWORD(used_opcode) & 0x1F] + a1->reg[(used_opcode >> 5) & 0x1F];
 } 
 ```
-- 0-4位为目标寄存器，5-9位和16-20位是寄存器(5位刚好对应32个寄存器)，31-28为操作码(~~其他的不知道，可能是立即数~~)
+0-4位为目标寄存器，5-9位和16-20位是寄存器(5位刚好对应32个寄存器)，31-28为操作码(~~其他的不知道，可能是立即数~~)
 
 ### store指令
 
@@ -345,8 +359,9 @@ char *__fastcall store(vm_mem *a1, char *sta_base)
   used_opcode = *(_DWORD *)(a1->opcode + (a1->rip & 0xFFFFFFFFFFFFFFFCLL));
   a1->rip += 4LL;
   result = (char *)(unsigned __int8)ffh;
-  if ( (unsigned __int8)(a1->reg[(used_opcode >> 5) & 0x1F] + BYTE2(used_opcode)) < (unsigned __int8)ffh )//取出右边移位5之后取出来的值对应的寄存器的值(觉得说得绕的话多看看代码)，加上右移十六位之后的opcdoe值相加
-  {
+  if ( (unsigned __int8)(a1->reg[(used_opcode >> 5) & 0x1F] + BYTE2(used_opcode)) < (unsigned __int8)ffh )
+  /*取出右边移位5之后取出来的值对应的寄存器的值(觉得说得绕的话多看看代码)，加上右移十六位之后的opcdoe值相加*/
+  {  
     v4 = &sta_base[(unsigned __int16)(a1->reg[(used_opcode >> 5) & 0x1F] + (HIWORD(used_opcode) & 0xFFF))];// 寄存器值+偏移获取栈的地址
     *(_QWORD *)v4 = a1->reg[used_opcode & 0x1F];// 把目标寄存器的值传给栈
     return v4;
@@ -354,8 +369,9 @@ char *__fastcall store(vm_mem *a1, char *sta_base)
   return result;
 }
 ```
-- Load函数是通过移位也就是一个字节一个字节的取赋值所以ida逆向得有点逆天，看汇编+把store反过来看就可以了
-- 漏洞也就是在这两个指令，这里对于索引进行了取单字节的操作(也就是(unsigned __int8)这个操作)，这就导致无论实际上的操作数是多大，都会被截断后再check，会导致这里的check失效，可以越界读写栈上的内容
+Load函数是通过移位也就是一个字节一个字节的取赋值所以ida逆向得有点逆天，看汇编+把store反过来看就可以了   
+
+漏洞也就是在这两个指令，这里对于索引进行了取单字节的操作(也就是(unsigned __int8)这个操作)，这就导致无论实际上的操作数是多大，都会被截断后再check，会导致这里的check失效，可以越界读写栈上的内容
 
 # 漏洞利用
 
