--- a/_posts/2024-12-24-avm.md
+++ b/_posts/2024-12-24-avm.md
@@ -236,8 +236,11 @@ uint16_t mem_read(uint16_t address)
 
 
  
-# 逆向
-- 原题目是：2024 · CISCN长城杯 
+# 逆向  
+
+原题目是：2024 · CISCN长城杯avm 
+ 
+
 ## main函数结构
 ```c
 unsigned __int64 __fastcall main(__int64 a1, char **a2, char **a3)
