--- a/_posts/2024-12-30-ret2dll.md
+++ b/_posts/2024-12-30-ret2dll.md
@@ -13,7 +13,7 @@ tags:
 
 先给一个整体的直观的图(建议图和代码配合食用)
 
-![](https://s2.loli.net/2024/12/30/u1Y4LAFkW9xVl6B.png) 
+![延迟绑定](https://s2.loli.net/2024/12/30/u1Y4LAFkW9xVl6B.png) 
 
 
 然后是详细的代码(每个表项16 个字节)
