--- a/_posts/2024-12-30-ret2dll.md
+++ b/_posts/2024-12-30-ret2dll.md
@@ -82,7 +82,7 @@ struct link_map
   {
    
     ElfW(Addr) l_addr;    /* 共享对象被加载到内存中的基地址。这个字段对于动态链接器来说非常重要，因为它指示了如何访问共享对象中的符号和数据  */
-    char *l_name;     /* 共享对象的绝对路径名。这个字段用于记录共享库的文件名，方便调试和错误报告  */
+    char *l_name;     
     ElfW(Dyn) *l_ld;      /* 指向共享对象的动态段（dynamic section），该段包含了动态链接所需的信息，比如符号表、重定位表、所需的共享库等 */
     struct link_map *l_next, *l_prev; /* 指向链表中下一个和上一个 link_map 结构体的指针。这个链表用于维护已加载共享对象的顺序，
     方便动态链接器在处理多个共享库时进行遍历.  */
