--- a/_posts/2024-12-24-gdb技巧.md
+++ b/_posts/2024-12-24-gdb技巧.md
@@ -11,6 +11,8 @@ tags:
 - 假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234，那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。
 使用 pwngdb 中的 $rebase() 函数可以更方便地在基地址重定位后进行调试，而无需手动计算绝对地址
 
+# 关闭aslr
+- 关闭aslr：echo 0 > /proc/sys/kernel/randomize_va_space
 
 # 设置运行参数
 gsb启动之后可以设置运行程序参数
