--- a/_posts/2024-12-24-调试技巧.md
+++ b/_posts/2024-12-24-调试技巧.md
@@ -1,9 +1,8 @@
 ---
 redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
-title: gdb
-tags: 
-- pwn
-- gdb
+title: 调试技巧
+tags: - pwn
+
 ---
 
 # pie断点
