--- a/_posts/2024-12-24-调试技巧.md
+++ b/_posts/2024-12-24-调试技巧.md
@@ -7,54 +7,30 @@ tags: - pwn
 
 # pie断点
 
-- 假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234，那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。
-使用 pwngdb 中的 $rebase() 函数可以更方便地在基地址重定位后进行调试，而无需手动计算绝对地址
+- 假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234（ida查看），那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。
 
 # 关闭aslr
-- 关闭aslr：echo 0 > /proc/sys/kernel/randomize_va_space
+查看aslr配置：
+```bash
+cat /proc/sys/kernel/randomize_va_space
+```
+
+关闭aslr：
+```bash
+echo 0 > /proc/sys/kernel/randomize_va_space
+```
 
 # 设置运行参数
 gsb启动之后可以设置运行程序参数
 - gdb filename
 - set args （参数）
-# byobu
-## 上下文设置
-- file_name = "./pwn(假设叫这个名字)"
-- context.terminal = ['byobu', 'sp', '-h']：设置终端，并水平分割窗口
-- p = gdb.debug(file_name,"b main")
-
-## 窗口的创建
-- F2 创建新的窗口
-- SHIFT + F2 切分一个水平窗格
-- CTRL + F2  切分一个垂直窗格
-## 窗口的切换
-- F3 回到先前窗口
-- F4 跳到下一个窗口
-- SHIFT + F3/F4：在水平/垂直窗口切换
-- Ctrl + D关闭当前窗口
-
-## 窗口的调整
-
-- Ctrl + a 然后按 ←/→：设置切分窗口的左右比例
-- SHIFT + F11 暂时设置当前窗口为全屏
-- F7 进入 复制/回滚模式
-
-## 更多(不常用)
-按F9进入Byobu配置菜单,有很多不同的通知可供选择，一些常用的通知是：
-- date 显示当前系统日期。
-- disk 显示当前磁盘空间使用情况。
-- hostname 显示当前系统主机名。
-- ip_address 显示当前系统的IP地址。
-- load_average 显示当前系统负载平均值。
-- memory 显示当前的内存使用情况。
-- network 显示当前的网络使用情况，发送和接收。
-- reboot_required 显示需要重新启动系统时的指示灯。
-- release 显示当前的分发版本（例如14.04）。
-- time 显示当前系统时间。
-- updates_available 在有可用更新时显示指示符。
-- uptime 显示当前系统正常运行时间。
-- whoami 显示当前登录的用户
 
 
+# tmux
+
+tmux开启鼠标：
+```bash
+tmux set-option -g mouse on
+```
 -----
 持续更新中
