--- a/_posts/2024-12-24-调试技巧.md
+++ b/_posts/2024-12-24-调试技巧.md
@@ -1,15 +1,34 @@
 ---
-redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
+
 title: 调试技巧
 tags: - pwn
 
 ---
 
-# pie断点
+## pie断点
 
-- 假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234（ida查看），那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。
+假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234（ida查看），那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。    
 
-# 关闭aslr
+模板
+```python
+def debug(filename = file_name,b_slice=[],is_pie=0,is_start = 1):
+    global io
+    b_string = ""
+    if is_pie:
+        for i in b_slice:
+            b_string += f"b *$rebase({i})\n"
+    else:
+        for i in b_slice:
+            b_string += f"b *{hex(i)}\n"
+    if is_start :
+        io = gdb.debug(filename,b_string)
+        return
+    else:
+        gdb.attach(io,b_string)
+        pause()
+```
+
+## 关闭aslr
 查看aslr配置：
 ```bash
 cat /proc/sys/kernel/randomize_va_space
@@ -20,17 +39,18 @@ cat /proc/sys/kernel/randomize_va_space
 echo 0 > /proc/sys/kernel/randomize_va_space
 ```
 
-# 设置运行参数
+## 设置运行参数
 gsb启动之后可以设置运行程序参数
-- gdb filename
-- set args （参数）
+gdb filename
+set args （参数）
 
-
-# tmux
+## tmux
 
 tmux开启鼠标：
 ```bash
-tmux set-option -g mouse on
+vim ~/.tmux.conf
+set -g mouse on
+tmux source-file ~/.tmux.conf
 ```
 -----
 持续更新中
