--- a/_posts/2024-12-30-堆.md
+++ b/_posts/2024-12-30-堆.md
@@ -85,6 +85,15 @@ P:记录连续的上一个chunk是否为free chunk，如果不是是malloced chu
 #### unsorted bin
 - 双向链表，管理刚刚释放还为分类的 chunk,也就是空闲 chunk 回归其所属 bin 之前的缓冲区
 
+
+## 攻击手法
+
+### UseAfterFree
+
+### DoubleFree
+
+### On
+
 ## 相关补充知识
 ### 虚拟内存与物理内存
 每个进程都有独立的虚拟内存机制供自己使用，虚拟内存机制是操作系统提供的内存管理机制，该机制操作一段逻辑上的虚拟内存空间，在程序访问内存时操作系统将相应逻辑内存映射到物理内存来进行访问，因此访问硬件的仍然是操作系统
