--- a/_posts/2024-12-30-ret2dll.md
+++ b/_posts/2024-12-30-ret2dll.md
@@ -4,7 +4,7 @@ tags:
 - pwn
 ---
 
->深刻了解了计算机储存信息的方式:同类化，抽象化，依次循环这两个步骤
+>深刻了解了计算机储存信息的方式:同类化，抽象化，依次循环这两个步骤(本次先记录32位)
 
 ## 延迟绑定
 
@@ -18,22 +18,22 @@ tags:
 
 然后是详细的代码(每个表项16 个字节) 
 
-PLT[0] :
+PLT[0] :(这一段也叫.plt.sec)
 ```c
 0x4004c0: ff 35 42 0b 20 00 push QWORD PTR [rip+offset1]  /*push [GOT[1]]*/
 0x4004c6: ff 25 44 0b 20 00 jmp QWORD PTR [rip+offset2]  /* jmp [GOT[2]] */
-0x4004cc: 0f 1f 40 00 nop DWORD PTR [rax+0x0]   /* 没啥用的指令 */
+0x4004cc: 0f 1f 40 00 nop DWORD PTR [rax+0x0]  
 ```
 
 
-PLT[1]：
+PLT[1]：(这一段也叫.plt)
 ```c
 0x4004d0: ff 25 42 0b 20 00 jmp QWORD PTR [rip+offset3] /*  jmp GOT[3] */
 0x4004d6: 68 00 00 00 00 push 0x0 /* push reloc_arg */
 0x4004db: e9 e0 ff ff ff jmp 0x4004c0 <_init+0x20>  /*  jmp PLT[0] */
 ```
 
-### got表
+### got表(.got.plt)
 这个表就是正常的储存数据的表了,每一个表项存储的都是一个地址 
 
 - GOT[0] --> 此处存放的是 .dynamic 的地址；
@@ -82,11 +82,10 @@ Dynamic section at offset 0xf14 contains 24 entries:
 struct link_map
   {
    
-    ElfW(Addr) l_addr;    /* 共享对象被加载到内存中的基地址。这个字段对于动态链接器来说非常重要，因为它指示了如何访问共享对象中的符号和数据  */
-    char *l_name;     
-    ElfW(Dyn) *l_ld;      /* 指向共享对象的动态段（dynamic section），该段包含了动态链接所需的信息，比如符号表、重定位表、所需的共享库等 */
-    struct link_map *l_next, *l_prev; /* 指向链表中下一个和上一个 link_map 结构体的指针。这个链表用于维护已加载共享对象的顺序，
-    方便动态链接器在处理多个共享库时进行遍历.  */
+    ElfW(Addr) l_addr;    /* 4bytes */
+    char *l_name;       /* 4bytes */
+    ElfW(Dyn) *l_ld;      /* 存的地址(4bytes)，指向共享对象的动态段（dynamic section）*/
+    struct link_map *l_next, *l_prev; /* 指针，4bytes */
 };
 ```
 
@@ -95,33 +94,33 @@ struct link_map
 总结就是dll函数的第一个参数可以找到.dynamic段
 ### 偏移怎么找    
 
-每个函数都有一个自己单独的Elf32_Sym结构比如:
+每个函数都有一个自己单独的Elf32_Sym结构用于找这个函数的偏移，比如:
 ```c
 LOAD:3E8                             ; ELF Symbol Table
 LOAD:3E8 00 00 00 00 00 00 00 00 00 00+Elf64_Sym <0>
 LOAD:400 6A 00 00 00 12 00 00 00 00 00+Elf64_Sym <offset aFree - offset unk_628, 12h, 0, 0, offset dword_0, 0> ; "free"
 LOAD:418 2F 00 00 00 12 00 00 00 00 00+Elf64_Sym <offset aLibcStartMain - offset unk_628, 12h, 0, 0, offset dword_0, 0> ; "__libc_start_main"  /*随便找个elf文件拖到ida里面就可以验证了*/
 ```
-Elf32_Sym这个结构体中第一个成员存储的就是我们要找fun_name的偏移,
+Elf32_Sym这个结构体中第一个成员存储的就是`我们要找fun_name的偏移`,
 ```c
 typedef struct
 {
-  Elf32_Word   st_name;      /* 表示该成员在字符串表中的下标，也就是偏移 */
-  Elf32_Addr   st_value;     /* 将要解析的函数在libc中的偏移地址 */
-  Elf32_Word   st_size;      /* 符号长度 */
+  Elf32_Word   st_name;      /* 表示该成员在字符串表中的下标，也就是偏移，4bytes */
+  Elf32_Addr   st_value;     /* 将要解析的函数在libc中的偏移地址，4bytes  */
+  Elf32_Word   st_size;      /* 符号长度，4bytes  */
   unsigned char    st_info;      
   unsigned char    st_other;    
-  Elf32_Section    st_shndx;     
-} Elf32_Sym;
+  Elf32_Section    st_shndx;   /* 2bytes */  
+} Elf32_Sym;/*  16 字节,需要对齐 */
 ```
 
 
-这个结构体又存储在.dynsym(也就是上面的ELF Symbol Table)    
+这个结构体又存储在`.dynsym`(也就是上面的ELF Symbol Table)    
 
 
-.dynsym的地址也在上面提到的.dynamic段中存储了，那么怎么去.dynsym中找到`我们要找的这个函数`的Elf32_Sym？
+`.dynsym`的地址也在上面提到的`.dynamic`段中存储了，那么怎么去.dynsym中找到`我们要找的这个函数`的Elf32_Sym？
 
-用上面.dynamic段获取到的`rel.plt`的值加上dl_runtime_resolve的第二个参数`reloc_index`，就是重定位表项`Elf32_Rel`的指针 
+用上面.dynamic段获取到的`rel.plt`的值加上dl_runtime_resolve的第二个参数`reloc_index`，就是重定位表项`Elf32_Rel`的指针   
 
 ```c
 typedef struct {
@@ -129,7 +128,7 @@ typedef struct {
     /* 就是说最后解析之后真实的地址会填写进r_offset所指向的地方 */
     Elf32_Word  r_info; 	 /* 重定位入口的类型（低8位，1字节），将r_info>>8作为dynsym的下标 */
 	                   
-} Elf32_Rel;
+} Elf32_Rel;/* 两个四字节成员 */
 ```
 
 ```c
@@ -163,7 +162,11 @@ LOAD:810 E0 3F 00 00 00 00 00 00 06 00+Elf64_Rela <3FE0h, 300000006h, 0>       ;
 ## 漏洞所在
 最后_dl_lookup_symbol_x这个函数并不在乎你给的字符串是否是你此刻在延迟绑定的函数，即使这个字符串是别的函数的名称，它依旧会去搜索，并且动态装载器并不会去检查重定位表的边界，即使你的_dl_runtime_resolve函数第二个参数是极大的，此时的偏移已经超过了rel,plt段的范围，装载器也依旧是认为这只是一个很大的rel.plt偏移，它不认为这个偏移超过了rel.plt段。综上所述，如果我们可以控制这个函数的参数，那么我们就可以伪造一个很大的 reloc_index,让原本偏移到rel.plt段的reloc_index偏移到我们伪造的可控内存，然后我们就可以伪造一系列的结构，最终让距离dynstr段首的偏移指向我们指定的字符串（也就是伪造了字符串），至此_dl_lookup_symbol函数就去搜索到了我们指定的函数
 
-## 源码调试
+
+
+
+## 攻击
+
 
 
 
