--- a/_posts/2024-12-30-ret2dll.md
+++ b/_posts/2024-12-30-ret2dll.md
@@ -47,9 +47,10 @@ PLT[1]：(这一段也叫.plt)
 
 先简单说一下_dl_runtime_resolve(link_map_obj, reloc_index)函数的工作流程，_dl_runtime_reslove函数调用了_dl_fixup函数，然后_dl_fixup函数调用了_dl_lookup_symbol_x函数，最终这个函数去动态库里面找到了我们此刻进行延迟绑定的函数，并且把它的地址填写到了got.plt表项中
 
-fun_name是个字符串，而我们要拿到这个字符串的首地址 ,目的是为执行_dl_lookup_symbol_x(fun_name)这个函数，它可以带着fun_name这个字符串去搜索动态链接库的符号表，然后填写到got.plt里面         
+fun_name是个字符串，而我们要拿到这个字符串的首地址 ,目的是为执行_dl_lookup_symbol_x(fun_name)这个函数 
 
-这个`fun_name`字符串放在`.dynstr`（动态符号字符串表）里面,那么我们就需要找到`.dynstr的首地址`，以及我们所需要的字符串距离.dynstr首地址的`偏移`  
+这个`fun_name`字符串放在`.dynstr`（动态符号字符串表）里面,那么我们就需要找到`.dynstr的首地址`，以及我们所需要的字符串距离.dynstr首地址的`偏移` ，我们主要利用的就是这个偏移
+
 
 ### 首地址怎么找
 
@@ -156,22 +157,40 @@ LOAD:810 E0 3F 00 00 00 00 00 00 06 00+Elf64_Rela <3FE0h, 300000006h, 0>       ;
 
 5. 在动态链接库查找这个函数的地址，并且把地址赋值给*rel->r_offset，即GOT表
 
-6. 最后调用这个函数
+6. 最后ret到这个函数(符号)
 
 
 ## 漏洞所在
-最后_dl_lookup_symbol_x这个函数并不在乎你给的字符串是否是你此刻在延迟绑定的函数，即使这个字符串是别的函数的名称，它依旧会去搜索，并且动态装载器并不会去检查重定位表的边界，即使你的_dl_runtime_resolve函数第二个参数是极大的，此时的偏移已经超过了rel,plt段的范围，装载器也依旧是认为这只是一个很大的rel.plt偏移，它不认为这个偏移超过了rel.plt段。综上所述，如果我们可以控制这个函数的参数，那么我们就可以伪造一个很大的 reloc_index,让原本偏移到rel.plt段的reloc_index偏移到我们伪造的可控内存，然后我们就可以伪造一系列的结构，最终让距离dynstr段首的偏移指向我们指定的字符串（也就是伪造了字符串），至此_dl_lookup_symbol函数就去搜索到了我们指定的函数
 
 
+最后_dl_lookup_symbol_x这个函数并不在乎你给的字符串是否是你此刻在延迟绑定的函数，即使这个字符串是别的函数的名称 
 
+并且动态装载器并不会去检查重定位表的边界，即使你的_dl_runtime_resolve函数第二个参数是极大的，已经超过了rel,plt段的范围，装载器也依旧是认为这只是一个很大的rel.plt偏移，更关键的是它的参数都是直接从栈上取的，这样我们伪造栈，就可以伪造参数了
+  
+我们伪造一个`很大的reloc_index`,让原本偏移到rel.plt段的reloc_index偏移到我们伪造的`可控内存`，然后我们就可以伪造一系列的结构 
 
+最终让距离dynstr段首的偏移指向我们指定的字符串（也就是伪造了字符串）  
+
+上面这个方法也叫伪造 link_map(但我觉得这个名字不好，不如叫index_to_struct)
+
+进行这个攻击只需要两个条件：足够大的空间让我们布置栈(可以迁栈也可以)，partial relro(但是更明显的表示是没有输出函数)
 ## 攻击
+### 思路布局
+在利用漏洞前我们一定要明确我们每一步操作甚至每一个数据的目的是什么，不然就会被庞大的数据绕晕了，因为好几个数据都是由两个数据来决定的，所以我们控制其中一个就好了
 
+1. 伪造reloc_arg为index_offset，欺骗程序把`bss_stage+28`处的内容识别为Elf_rel
+2. 伪造Elf_rel中的r_info，欺骗程序把`bss_stage+36`处的内容识别为Elf_sym
+3. 伪造Elf_sym中的st_name，欺骗程序把`bss_stage+52`处的内容识别为str
 
+bss_stage后面的数字都是经过调试测出来为了对齐而选择的，只要构造得不会让程序crush随便你选位置
 
+这就是我们想要的栈布局  
 
+![ret2dll1](https://s2.loli.net/2025/01/05/ec2WqlwbI9GAu8C.png)
 
+另附一张正常的栈布局
 
+![ret2dll2](https://s2.loli.net/2025/01/05/CpGunjEktBdQ5JA.png)
 
-
+#### 数据构造
 
