--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -3,11 +3,9 @@ title: pwn文章索引
 tags: pwn
 ---
 
+这是我对pwn相关文章的总体索引   
 
-
-
-- 这是我对pwn相关文章的总体索引
-- 你可以把它当成目录，或者说符号表
+你可以把它当成目录，或者说符号表
 
 --------
 
@@ -15,7 +13,6 @@ tags: pwn
 -[cpp基础底层知识]()
 
 ## vm_pwn
-
 
 - [vm_pwn学习+24长城杯avm练习](https://4ak5ra.github.io/2024/12/24/avm/)
 
