--- a/_posts/2024-12-24-调试技巧.md
+++ b/_posts/2024-12-24-调试技巧.md
@@ -5,7 +5,6 @@ tags:
 ---
 
 ## pie断点
-
 假设程序的加载基地址是 0x55555000，而相对基址偏移是 0x1234（ida查看），那么 $rebase(0x1234) 将计算出断点应设置的绝对地址 0x55556234，然后可以使用 b *0x55556234 命令在该地址处设置断点。    
 
 模板
@@ -50,6 +49,33 @@ tmux开启鼠标：
 vim ~/.tmux.conf
 set -g mouse on
 tmux source-file ~/.tmux.conf
+```
+
+
+## 自定义gdb的批处理命令
+
+写在`.gdbinit`里面，启动gdb的时候自动加载
+
+`$argc`是参数命令行参数的个数，`$arg0`是第一个参数，依次类推
+
+```python
+define sbase
+    if $argc == 1
+        telescope $rebase($arg0) 10   #pie断点
+    end
+
+    if $argc == 2
+        telescope $rebase($argc) $argc1
+    end
+end
+
+define bbase
+    b *$rebase($arg0)
+end
+
+define dis                #简记命令
+    disassemble $arg0
+end
 ```
 -----
 持续更新中
