--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -10,18 +10,19 @@ tags: pwn
 --------
 
 ## cpp_pwn
--[cpp基础底层知识]()
+[cpp基础底层知识]()
 
 ## vm_pwn
 
-- [vm_pwn学习+24长城杯avm练习](https://4ak5ra.github.io/2024/12/24/avm/)
+[vm_pwn学习+24长城杯avm练习](https://4ak5ra.github.io/2024/12/24/avm/)
 
 ## 栈
 ### 基础
-- [覆写之ret2text](https://4ak5ra.github.io/2025/01/02/pwn%E5%85%A5%E9%97%A8%E4%B8%89%E9%83%A8%E6%9B%B2%E4%B9%8Bret2text/)
+[覆写之ret2text](https://4ak5ra.github.io/2025/01/02/pwn%E5%85%A5%E9%97%A8%E4%B8%89%E9%83%A8%E6%9B%B2%E4%B9%8Bret2text/)
 ### 高级栈rop
-- [ret2dll](https://4ak5ra.github.io/2024/12/30/ret2dll/)
+
+[ret2dll](https://4ak5ra.github.io/2024/12/30/ret2dll%E5%88%9D%E4%BD%93%E9%AA%8C/)
 
 ## 堆
 
-- [堆基础知识点](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)
+[堆基础知识点](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)
