--- a/_posts/2024-12-30-堆.md
+++ b/_posts/2024-12-30-堆.md
@@ -84,14 +84,14 @@ P:记录连续的上一个chunk是否为free chunk，如果不是是malloced chu
 #### large bin
 #### unsorted bin
 - 双向链表，管理刚刚释放还为分类的 chunk,也就是空闲 chunk 回归其所属 bin 之前的缓冲区
-
+- 位于topchunk上面，用unlink管理其中的free_chunk
 
 ## 攻击手法
 
 ### UseAfterFree
-
+当一个指针被free后没有被置空，而且它为于fastbins的头部时，当这个指针再次被malloc的时候就会造成uaf，此时就可以构造chunk来让glibc把该chunk分配成我们想要的结构来实现任意地址读写
 ### DoubleFree
-
+当一个freechunk再次被free时它的bk就会指向当前bins的头部，而它的fd就会和整个bins形成一个循环的结构，此时将bins中的chunk  free出去的话就可以改写bins中的chunk，如果我们向这个chunk写入构造好的payload就可以实现任意地址读写
 ### On
 
 ## 相关补充知识
