--- a/_posts/2024-12-27-cpp_pwn.md
+++ b/_posts/2024-12-27-cpp_pwn.md
@@ -7,22 +7,30 @@ tags:
 
 
 ## 作用域
+作用域（Scope）用于组织代码和避免命名冲突，也就是说你可以用定义两个不同类型但相同名字的变量(在不同作用域)   
 
->作用域（Scope）用于组织代码和避免命名冲突，也就是说你可以用定义两个不同类型但相同名字的变量(在不同作用域)
       
-1. 全局作用域作用域
+1. 全局作用域作用域 
+
 全局作用域就是宏，数据存在.bss段或者.data段之类的地方
 
-2. 名字空间作用域(命名空间) 
+2. 名字空间作用域(命名空间)     
+
 定义一个名字作为标识符，通过这个标识符(名字)::变量名的方式访问里面的变量，C++标准库中的所有标识符都定义在std命名空间中
 >这也就是为什么用cout函数的时候要```std::cout```
-3. 局部作用域:
+3. 局部作用域:  
+
 局部变量，存在stack上的数据
-4. 类作用域（class scope）:
-一个类的结构范围就是一个类作用域，被定义在类里面的数据被称为成员        
+4. 类作用域（class scope）:     
+
+
+一个类的结构范围就是一个类作用域，被定义在类里面的数据被称为成员      
+
 
 对于类函数来说，编译器会把 `类名称,函数名称,参数列表` 放入哈希函数转化为一个哈希值，并用这个哈希值来当做函数的名称
-5. 语句作用域:
+5. 语句作用域:  
+
+
 在for while if的语句里也可以定义数据，这里就是语句作用域
 
 ## this指针
@@ -252,3 +260,4 @@ void text()
 	}
 }
 ```
+
