--- a/_posts/2024-12-27-cpp_pwn.md
+++ b/_posts/2024-12-27-cpp_pwn.md
@@ -16,8 +16,9 @@ tags:
 
 2. 名字空间作用域(命名空间)     
 
-定义一个名字作为标识符，通过这个标识符(名字)::变量名的方式访问里面的变量，C++标准库中的所有标识符都定义在std命名空间中
->这也就是为什么用cout函数的时候要```std::cout```
+定义一个名字作为标识符，通过这个标识符(名字)::变量名的方式访问里面的变量，C++标准库中的所有标识符都定义在std命名空间中  
+
+这也就是为什么用cout函数的时候要```std::cout```
 3. 局部作用域:  
 
 局部变量，存在stack上的数据
