--- a/_posts/2024-12-27-cpp_pwn.md
+++ b/_posts/2024-12-27-cpp_pwn.md
@@ -16,7 +16,7 @@ tags:
 
 2. 名字空间作用域(命名空间)     
 
-定义一个名字作为标识符，通过这个标识符(名字)::变量名的方式访问里面的变量，C++标准库中的所有标识符都定义在std命名空间中  
+定义一个名字作为标识符，通过这个`标识符(名字)::变量名`的方式访问里面的变量，C++标准库中的所有标识符都定义在std命名空间中  
 
 这也就是为什么用cout函数的时候要```std::cout```
 3. 局部作用域:  
@@ -24,18 +24,14 @@ tags:
 局部变量，存在stack上的数据
 4. 类作用域（class scope）:     
 
-
 一个类的结构范围就是一个类作用域，被定义在类里面的数据被称为成员      
 
-
-对于类函数来说，编译器会把 `类名称,函数名称,参数列表` 放入哈希函数转化为一个哈希值，并用这个哈希值来当做函数的名称
 5. 语句作用域:  
-
 
 在for while if的语句里也可以定义数据，这里就是语句作用域
 
 ## this指针
-指向当前对象的指针，类型为指向类类型的指针（例如，对于 Base 类，this 的类型是 Base*）
+指向当前对象的指针，类型为指向`类`类型的指针（例如，对于 Base 类，this 的类型是 Base*）
 ### 底层
 源码
 ```c++
@@ -45,7 +41,7 @@ using namespace std;
 
 class Base{
 public:
-    void fun(){                /* 成员函数的代码是存储在程序的代码段中，而不是存储在类的实例中。每个类的成员函数在内存中只有一份实现 */
+    void fun(){                /* 成员函数的代码是存储在程序的代码段中，而不是存储在类的实例中。每个类的成员函数在内存中只有一份实现(也符合代码复用的特点) */
         cout<<name<<endl;
     }
     char name[10];
@@ -71,7 +67,7 @@ int main(void){
     b->foo();          
 }
 ```
-ida
+ida版本的
 ```c
 __int64 __fastcall B::foo(B *this)  /* foo()这个成员函数 */
 {
@@ -109,7 +105,7 @@ int __cdecl main(int argc, const char **argv, const char **envp)
   *(_QWORD *)v4 = 0i64;           /* 这两行是编译器的优化，帮我们初始化了分配name段的内存 */
   *(_WORD *)(v4 + 8) = 0;
   v6 = (B *)v4;             
-  A::foo(v7);               /* 编译器会在调用时自动将对象的地址（即 this 指针）传递给该函数。这使得函数可以访问该对象的成员变量和其他成员函数 */
+  A::foo(v7);               /* 编译器会在调用时自动将对象的地址（即 this 指针）传递给该函数。这使得不在类内部的函数也可以访问类的成员变量 */
   B::foo(v6);                 /* 这也就是为什么我们什么在代码里什么都没传但ida的里面却有参数 */
   return 0;
 }
@@ -117,10 +113,8 @@ int __cdecl main(int argc, const char **argv, const char **envp)
 
 ## 重载
 ### 函数重载
->允许在同一个作用域中定义多个同名的函数，但是这些函数必须有不同的参数列表(参数类型，顺序，个数)。
+允许在同一个作用域中定义多个同名的函数，但是这些函数必须有不同的参数列表(参数类型，顺序，个数)。
 编译器在函数调用时根据参数的类型和数量来决定调用哪个具体的函数版本，这一过程称为```静态绑定```(留个印象)
-   
-----
 
 ```c++
 #include <iostream>
@@ -139,56 +133,167 @@ public:
 };
 int main() {
     Example obj;
-    cout << obj.add(2, 3) << endl;      // 输出 5
-    cout << obj.add(2.5, 3.5) << endl;  // 输出 6.0
-    cout << obj.add(1, 2, 3) << endl;    // 输出 6
-    //用户只需记住一个函数名，而不必为每个参数组合记住不同的函数名
+    cout << obj.add(2, 3) << endl;      /* 输出 5 */
+    cout << obj.add(2.2, 3.5) << endl;   /* 输出 5.7 */
+    cout << obj.add(1, 2, 3) << endl;    /* 输出 6 */
+    /* 用户只需记住一个函数名，而不必为每个参数组合记住不同的函数名 */
     return 0;
 }
 ```
+ida版本的   
 
+对于类函数来说，编译器会把 `类名称,函数名称,参数列表` 放入哈希函数转化为一个哈希值，并用这个`哈希值`来当做函数的名称
+```c
+push    rbp
+mov     rbp, rsp
+sub     rsp, 40h
+call    __main
+lea     rax, [rbp+var_1]
+mov     r8d, 3          ; int
+mov     edx, 2          ; int
+mov     rcx, rax        ; this
+call    _ZN7Example3addEii ; Example::add(int,int)
+mov     edx, eax
+mov     rcx, cs:_refptr__ZSt4cout
+call    _ZNSolsEi       ; std::ostream::operator<<(int)
+mov     rdx, cs:_refptr__ZSt4endlIcSt11char_traitsIcEERSt13basic_ostreamIT_T0_ES6_
+mov     rcx, rax
+call    _ZNSolsEPFRSoS_E ; std::ostream::operator<<(std::ostream & (*)(std::ostream &))
+mov     rcx, 400C000000000000h
+mov     rdx, 400199999999999Ah
+lea     rax, [rbp+var_1]
+mov     [rbp+var_18], rcx
+movsd   xmm2, [rbp+var_18] ; double
+mov     [rbp+var_18], rdx
+movsd   xmm1, [rbp+var_18] ; double
+mov     rcx, rax        ; this
+call    _ZN7Example3addEdd ; Example::add(double,double)
+movapd  xmm1, xmm0
+mov     rcx, cs:_refptr__ZSt4cout
+call    _ZNSolsEd       ; std::ostream::operator<<(double)
+mov     rdx, cs:_refptr__ZSt4endlIcSt11char_traitsIcEERSt13basic_ostreamIT_T0_ES6_
+mov     rcx, rax
+call    _ZNSolsEPFRSoS_E ; std::ostream::operator<<(std::ostream & (*)(std::ostream &))
+lea     rax, [rbp+var_1]
+mov     r9d, 3          ; int
+mov     r8d, 2          ; int
+mov     edx, 1          ; int
+mov     rcx, rax        ; this                             /* 通过该程序的符号信息我们可以知道 */
+call    _ZN7Example3addEiii ; Example::add(int,int,int)   /* 类名后面的3,add,E,iii分别代表：函数名长度，函数名，类名首字母，参数简写(i就是int) */
+mov     edx, eax
+mov     rcx, cs:_refptr__ZSt4cout
+call    _ZNSolsEi       ; std::ostream::operator<<(int)
+mov     rdx, cs:_refptr__ZSt4endlIcSt11char_traitsIcEERSt13basic_ostreamIT_T0_ES6_
+mov     rcx, rax
+call    _ZNSolsEPFRSoS_E ; std::ostream::operator<<(std::ostream & (*)(std::ostream &))
+mov     eax, 0
+add     rsp, 40h
+pop     rbp
+retn
+```
+编译器在语法分析时，就通过参数列表确定了应该调用的函数，然后把程序编译成了汇编
 ### 运算符重载
 
->本质上就是函数重载，但语法有点不一样
-定义一个函数，并告诉C++编译器，当遇到该运算符时就调用此函数来执行运算符功能。这个函数叫做运算符重载函数（常为类的成员函数）
-
-#### 例子
-```c++
-(返回值类型) (类名)(::operator)(重载的运算符)(参数表)
-   {
-    // 函数体
-   }
-
-   //operator是关键字，它与重载的运算符一起构成函数名
-```
+本质上就是函数重载，但语法有点不一样
+定义一个函数，并告诉C++编译器，当遇到该运算符时就`调用此函数`来执行运算符功能。这个函数叫做运算符重载函数（常为类的成员函数）
 
 ```c++
 #include <iostream>
-using namespace std;
-
-class Point{
+class Box
+{
 public:
-//访问修饰符，表示下面的成员（构造函数和友元函数）可以被类的外部访问
-    Point(){};
-    //Point 类的默认构造函数，允许创建 Point 对象而不传入参数。这里的 {} 表示构造函数的空实现
-    Point (int x, int y): x(x),y(y) {};
-    //参数的构造函数，使用初始化列表（: x(x), y(y)）将传入的参数 x 和 y 初始化到类的私有成员变量 x 和 y
-    friend ostream &operator<<(ostream &out , const Point &a);  
-    //声明友元函数，可以访问 Point 类的私有成员变量。ostream 是输出流的类，cout是其中的对象 ，<< 是其中的方法，a 是 Point 类的常量引用
-    
-private:
-    int x,y;
+    double getVolume(void){
+        return length * breadth * height;
+    }
+    void setAll(double len,double bre,double hei){
+        length = len;
+        breadth = bre;
+        height = hei;
+    }
+    Box operator + (const Box& b){ /* 重载运算符'+'(只有'+'两边都是Box类(因此传入常Box指针类型 const Box&)型时,才会触发该函数) */
+        Box box;
+        box.length = this->length + b.length;
+        box.breadth = this->breadth + b.breadth;
+        box.height = this->height + b.height;
+        return box;
+    }
+    double length;      
+    double breadth;     
+    double height;      
 };
 
-//<< 运算符重载的函数实现 ，ostream是输入输出流的类
-ostream &operator<<(ostream &out , const Point &a){
-    out << "<Point>( " << a.x << ", " << a.y << ")";
-    return out;
+int main(){
+    Box Box1;                
+    Box Box2;               
+    Box Box3;             
+    double volume = 0.0;     
+
+    Box1.setAll(1.0,1.0,1.0); 
+    Box2.setAll(2.0,2.0,2.0); 
+
+    volume = Box1.getVolume();
+    volume = Box2.getVolume();
+    Box3 = Box1 + Box2;
+    volume = Box3.getVolume();
+
+    return 0;
+}
+```
+ida版本的
+```c
+
+double *__fastcall Box::operator+(double *a1, double *a2, double *a3)   /* 重载的+运算符，本质是一个函数，把返回值给a1，也就是box类的this指针 */
+{
+  *a1 = *a2 + *a3;
+  a1[1] = a2[1] + a3[1];
+  a1[2] = a2[2] + a3[2];
+  return a1;
 }
 
-int main() {
 
-    cout << c<< endl;    //直接输出类会报错，需要上面的 << 运算符重载
+{
+  __int64 v3; // xmm0_8
+  __int64 v5[4]; // [rsp+30h] [rbp-80h] BYREF
+  __int64 v6[4]; // [rsp+50h] [rbp-60h] BYREF
+  char v7[32]; // [rsp+70h] [rbp-40h] BYREF
+  char v8[24]; // [rsp+90h] [rbp-20h] BYREF
+  __int64 v9; // [rsp+A8h] [rbp-8h]
+
+  _main();
+  v9 = 0i64;
+  Box::setAll((Box *)v8, 1.0, 1.0, 1.0);
+  Box::setAll((Box *)v7, 2.0, 2.0, 2.0);
+  Box::getVolume((Box *)v8);
+  v9 = v3;
+  Box::getVolume((Box *)v7);
+  v9 = v3;
+  Box::operator+(v5, v8, v7);   /* volume = Box3.getVolume(); */
+  v6[0] = v5[0];
+  v6[1] = v5[1];
+  v6[2] = v5[2];
+  Box::getVolume((Box *)v6);
+  return 0;
+}
+```
+因为我们知道类中只会存放数据结构，所以我们可以将其定义为结构体
+
+```c
+struct Box
+{
+  double len;      /* 就是我们在类中定义的属性变量 */
+  double bre;
+  double hei;
+};
+
+```
+
+```c
+Box *__fastcall Box::operator+(Box *a1, Box *a2, Box *a3)
+{
+  a1->len = a2->len + a3->len;          /* a2也是this指针 */
+  a1->bre = a2->bre + a3->bre;
+  a1->hei = a2->hei + a3->hei;
+  return a1;
 }
 ```
 
@@ -210,32 +315,26 @@ int main() {
     return 0;
 }
 ```
-### 序列容器
+ida
+```c
+int __cdecl main(int argc, const char **argv, const char **envp)
+{
+  __int64 v3; // rbx
+  _QWORD *v4; // rax
+  __int64 v5; // rax
+  int v7; // [rsp+Ch] [rbp-54h] BYREF
+  char v8[56]; // [rsp+10h] [rbp-50h] BYREF
 
-1. vector
-```c++
-#include <iostream>
-#include <vector>
-int main() {
-    std::vector<int> myVector;
-
-    // 添加元素
-    myVector.push_back(1);
-    // 访问元素
-    for (int i = 0; i < myVector.size(); ++i) {
-        std::cout << myVector[i] << " ";
-    }
-    std::cout << std::endl;
-
-    // 删除元素
-    myVector.pop_back(); // 删除最后一个元素
-
-    // 打印剩余元素
-    for (int value : myVector) {
-        std::cout << value << " ";
-    }
-    std::cout << std::endl;
-    return 0;
+  std::unordered_map<int,long>::unordered_map(v8, argv, envp);/* 返回一个unordered_map指针到v8 */
+  v7 = 1;
+  *(_QWORD *)std::unordered_map<int,long>::operator[](v8, &v7) = 100000LL;/* 用[]重载符访问v8的1索引的数据 */
+  v3 = std::operator<<<std::char_traits<char>>(&_bss_start, "Key: 1, Value: ");
+  v7 = 1;
+  v4 = (_QWORD *)std::unordered_map<int,long>::operator[](v8, &v7);    /* 访问v8的1索引的数据并把值传给v4 */
+  v5 = std::ostream::operator<<(v3, *v4);
+  std::ostream::operator<<(v5, &std::endl<char,std::char_traits<char>>);  /* 全部输出 */
+  std::unordered_map<int,long>::~unordered_map(v8);     /* 析构函数，释放资源 */
+  return 0;
 }
 ```
 
