--- a/_posts/2024-12-27-cpp_pwn.md
+++ b/_posts/2024-12-27-cpp_pwn.md
@@ -297,6 +297,49 @@ Box *__fastcall Box::operator+(Box *a1, Box *a2, Box *a3)
 }
 ```
 
+## 构造函数
+和析构函数相对立的函数对象
+```c++
+class Test1{
+public:
+	Test1(); /* 构造函数，当类的实例被创建后自动调用的函数 */
+};
+
+class Test2 : public Test1{
+
+};
+
+Test1::Test1(void)
+{
+    cout << "Test1" << endl;
+}
+
+int main(int argc, char* argv[])
+{                           
+	Test2 t;        /* 由于 Test2 没有构造函数，但父类 Test1 有构造函数 */
+	return 0;       /* 创建t对象的时候自动调用Test1 的构造函数 */
+}
+```
+
+底层
+
+```c
+Test2 *__fastcall Test2::Test2(Test2 *this)
+{
+  return Test1::Test1(this);         /* 从ida也可以看出来：实例化类的过程也是 对传入的参数 调用构造函数的过程 */
+}
+
+Test1 *__fastcall Test1::Test1(Test1 *this)
+{
+  std::ostream *v1; // rax
+
+  v1 = (std::ostream *)std::operator<<<std::char_traits<char>>(refptr__ZSt4cout, "Test1");
+  return (Test1 *)refptr__ZSt4endlIcSt11char_traitsIcEERSt13basic_ostreamIT_T0_ES6_(v1);
+}     /* 编译器自动把调用链补全了 */
+```
+
+
+
 ## 容器声明
 ### 关联容器
 1. unordered_map
@@ -338,6 +381,122 @@ int __cdecl main(int argc, const char **argv, const char **envp)
   return 0;
 }
 ```
+
+虚函数
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Test{
+public:
+    virtual void foo(){
+        cout<<"Test::foo() is called"<<endl;
+    }
+};
+
+int main(void){
+    Test *t = new Test();
+    t->foo();   
+    return 0;
+}
+```
+
+ida版本
+
+```c
+int __cdecl main(int argc, const char **argv, const char **envp)
+{
+  Test *v3; // rbx
+
+  _main();
+  v3 = (Test *)operator new(8ui64);     /* 分配8字节给 虚函数表指针vptr */
+  *(_QWORD *)v3 = 0i64;       /* 数值初始化 */
+  Test::Test(v3);       /* 对 v3 指向的内存进行构造，调用了 Test 类的构造函数，完成对象的初始化 */
+  (**(void (__fastcall ***)(Test *))v3)(v3);      
+  return 0;
+}
+```
+`(void (__fastcall ***)(Test *))v3`：这句将 v3 解释为一个指向虚函数表的指针，是一个指向指针的指针。这里的第一个 * 用于指向虚函数表的指针，第二个 * 用于指向该虚函数表中的函数指针，第三个 * 是具体的函数指针类型，(Test *) 表示这个函数指针的参数类型是 Test*，即调用时将以 Test 类的对象作为参数 
+
+这里两次解引用，获取虚函数表中第一个虚函数的指针。这是因为虚函数表中的指针是按顺序排列的。在 Test 类中，foo() 是第一个也是唯一的虚函数，因此这个解引用将给出指向 foo() 的指针。
+
+同样，可以来定义一下结构体
+```c
+struct test
+{
+  __int64 vptr;
+};
+```
+把v3转成结构体：
+```c
+v3 = (test *)operator new(8ui64);
+  v3->vptr = 0i64;
+  Test::Test((Test *)v3);
+  (*(void (__fastcall **)(test *))v3->vptr)(v3);
+```
+
+## 虚函数
+
+面向对象的语言有三大特性：继承、封装、多态。虚函数就是 cpp 实现多态的方式。多态：使得程序能够在运行时根据`对象的实际类型`来决定调用哪个版本的函数
+
+具体来说就是：虚函数由指针指向的`实际类型`决定  
+解释：在c语言中，`指针的类型`和指针`指向的类型`一般需要相同(比如char*和int*虽然都是__int64，但是不能相互赋值)，但是类指针强制类型转换不会改变`对象`的实际类型，只会改变指针的`解释方式`，所以
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+
+class Base{
+public:
+    virtual void foo(){
+        cout<<"Base::foo() is called"<<endl;
+    }
+};
+
+class A:public Base{
+public:
+    void foo(){
+        cout<<"A::foo() is called"<<endl;
+    }
+};
+
+class B:public Base{
+public:
+    void foo(){
+        cout<<"B::foo() is called"<<endl;
+    }
+};
+
+int main(void){
+    Base *a = new B(); /* a 是 Base* 类型的指针，但它实际上指向的是 B 类型的对象 */
+    a->foo();          /* 当调用 a->foo() 时，程序会查找 B 的虚函数表，找到 B::foo() 的地址并执行它 */
+    ((A *)a)->foo();    /* 将 a 转换为 A* 类型，但由于 a 实际指向的是一个 B 类型的对象，因此调用的仍然是 B 的 foo() 方法 */
+    return 0;
+}
+```
+
+ida
+```c
+int __cdecl main(int argc, const char **argv, const char **envp)
+{
+  B *v3; // rbx
+
+  _main();
+  v3 = (B *)operator new(8ui64);
+  *(_QWORD *)v3 = 0i64;
+  B::B(v3);
+  (**(void (__fastcall ***)(B *))v3)(v3);
+  (**(void (__fastcall ***)(B *))v3)(v3);
+  return 0;
+}
+```
+可以看到编译器实际上都是在对指针指向的实际类型B类进行操作，无论指针如何被解释。
+
+虚函数最重要的继承机制(实现多态的关键)就是在基类的虚函数表上添加自己的虚函数
 
 ## 迭代器
 迭代器是一种检查容器(可以理解为类，里面有数据结构和配套的算法)内元素并遍历元素的`数据类型`，通常用于对C++中各种容器内元素的访问，为了方便对不同的容器有相同的访问方法而设计出来，不同的容器有不同的迭代器，可以将迭代器理解为指针
