--- a/_posts/2024-12-30-堆.md
+++ b/_posts/2024-12-30-堆.md
@@ -63,8 +63,10 @@ P:记录连续的上一个chunk是否为free chunk，如果不是是malloced chu
 - fd_nextsize:(不包含bin)
 - bk_nextsize:(同理)
 #### top chunk
-- 第一次执行malloc的时候就会将heap切成两块，一块为分配出去的chunk，另一块为top chunk，之后要是分配的空间不足就会在top chunk上切分出去
-- 只有prev size和size两个字段，其中size展示当前top chunk的大小
+- 第一次执行malloc的时候就会将heap切成两块，一块为分配出去的chunk，另一块为top chunk，之后要是分配的空间不足（main arena 中的空闲块不足）就会在top chunk上切分出去
+- 只有size一个字段(prevsize始终作数据段)，其中size展示当前top chunk的大小
+- top chunk 的 prev_inuse 比特位始终为 1，否则其前面的 chunk 就会被合并到 top chunk 中
+- 初始情况下，我们可以将 unsorted chunk 作为 top chunk
 
 ### bin
 - linked bin:为了让maollloc尽快找到合适大小的chunk,free掉的chunk会被放到对应大小的bin中
